--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>OpenPPS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,122 +20,99 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>OpenPPS</h1>
+						<p>Open-source hardware project of a Programmable Power Supply.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#cta">Introduction</a></li>
+							<li><a href="#intro" class="active">Core Board</a></li>
+							<li><a href="#first">Input and Output Boards</a></li>
+							<li><a href="#status">Status</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
+					<!-- Get Started -->
+					<section id="cta" class="main special">
+							<header class="major">
+								<h2>Open Programmable Power Supply</h2>
+								<p>The point of the project is to create a portable adjustable power supply with MCU (<b>ESP32</b>), screen, controls, <b>USB-C</b>, Wi-Fi, Bluetooth,  
+								reasonably wide input and output range, modular structure, hackability and more.<br />
+								Everything at the size of a 20,000 mAh power bank. </p>
+							</header>
+							<footer class="major">
+								<ul class="actions special">
+									<li>Become a part of the project<br /> <a href="#" class="button primary">Subscribe to Updates</a></li>
+								</ul>
+							</footer>
+						</section>
+
 						<!-- Introduction -->
 							<section id="intro" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Core Board</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+										<ul>
+												<li><b>MCU</b>: ESP32</li>
+												<li><b>input</b>: 4.5 - 32 V</li>
+												<li><b>output</b>: 0.5 - 25 V</li>
+												<li><b>power</b>: up to 5A (100W)</li>
+												<li><b>efficiency</b>: up to 97%</li>
+												<li><b>CC/CV</b>, Power Good, Temperature Protection, Overvoltage Protection.</li>
 										</ul>
+										<p>Buck-Boost Converter IC with MCU control, ADC measurements (12 bit) and current limiting. Currently in developing/prototyping stage.<br />
+										Core Board can also be used as an separate <b>IoT</b> device where you need to control current or voltage over Wi-Fi and read various sensor values. Or as a module in other projects.</p>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/board.jpg" alt="" /></span>
 								</div>
 							</section>
 
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Magna veroeros</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+						<!-- first -->
+						<section id="first" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Input and Output Boards</h2>
+										</header>
+										<p><b>Input Board</b> is an optional part which offers various power input options for Core Board.<br />
+										Can contain anything including USB-C, micro-USB, car plug adapter, solar panel input, DC jack etc.<br />
+										Or even an AC-DC SMPS if you like. <br />
+										<b>Output Board</b> is also optional and configurable. Can contain screen, controls, USB-A/USB-C charging ports, power supply output etc. </p>
+									</div>
+								</div>
 							</section>
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+							<!-- Status -->
+							<section id="status" class="main special">
+									<header class="major">
+										<h2>Project Status</h2>
+										<p><span style="color:#AAA;">Last update 13/03/2019:</span><br /> Currently we are working on <b>Core Board</b> (PCB and firmware) to release it first on a crowdfunding platform.</p>
+									</header>
+									<ul class="features">
+											<li>
+												<span class="image"><img src="images/vasilii.jpg" alt="" style="width:128px; height:128px;"/></span>
+												<h3><b>Vasilii Atutov</b></h3>
+												<p>co-founder, CEO</p>
+											</li>
+											<li>
+												<span class="image"><img src="images/vladi.jpg" alt="" style="width:128px; height:128px;"/></span>
+												<h3><b>Vladimir Grankovsky</b></h3>
+												<p>co-founder, programmer</p>
+											</li>
+										</ul>
+									<footer class="major">
+										<ul class="actions special">
+											<li>Support the project<br /> <a href="#" class="button primary">Subscribe to Updates</a></li>
+										</ul>
+									</footer>
+								</section>							
 
 					</div>
 
@@ -149,12 +126,12 @@
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Where we are</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dt>Location</dt>
+								<dd>Hong Kong (Tsuen Wan) &bull; China (Shenzhen)</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>+86 186-8223-3241</dd>
 								<dt>Email</dt>
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
