--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 		<title>OpenPPS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="https://openpps.io/images/logo.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cfb3a177a3cba8690a600f448/b86dd02f7e82ed02040e1de1d.js");</script>
+		<!-- Yandex.Metrika counter -->
+		<script type="text/javascript" >
+			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+		
+			ym(52783663, "init", {
+				clickmap:true,
+				trackLinks:true,
+				accurateTrackBounce:true,
+				webvisor:true
+			});
+		</script>
+		<noscript><div><img src="https://mc.yandex.ru/watch/52783663" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+		<!-- /Yandex.Metrika counter -->
 	</head>
 	<body class="is-preload">
 
@@ -48,7 +64,26 @@
 							</header>
 							<footer class="major">
 								<ul class="actions special">
-									<li>Become a part of the project<br /> <a href="#" class="button primary">Subscribe to Updates</a></li>
+									<li>Become a part of the project<br /> <!-- Begin Mailchimp Signup Form -->
+										<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+										<style type="text/css">
+											#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+											/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+											   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+										</style>
+										<div id="mc_embed_signup">
+										<form action="https://OpenPPS.us20.list-manage.com/subscribe/post?u=cfb3a177a3cba8690a600f448&amp;id=6e8ae03a40" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+											<div id="mc_embed_signup_scroll">
+											<label for="mce-EMAIL">Subscribe to Updates</label>
+											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+											<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cfb3a177a3cba8690a600f448_6e8ae03a40" tabindex="-1" value=""></div>
+											<div class="clear" style="padding-top:15px;"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+											</div>
+										</form>
+										</div>
+										
+										<!--End mc_embed_signup--></li>
 								</ul>
 							</footer>
 						</section>
@@ -118,7 +153,26 @@
 									</ul>
 									<footer class="major">
 											<ul class="actions special">
-												<li>Support the project<br /> <a href="#" class="button primary">Subscribe to Updates</a></li>
+												<!-- Begin Mailchimp Signup Form -->
+												<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+												<style type="text/css">
+													#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+													/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+													We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+												</style>
+												<div id="mc_embed_signup">
+												<form action="https://OpenPPS.us20.list-manage.com/subscribe/post?u=cfb3a177a3cba8690a600f448&amp;id=6e8ae03a40" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+													<div id="mc_embed_signup_scroll">
+													<label for="mce-EMAIL">Subscribe to Updates</label>
+													<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+													<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+													<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cfb3a177a3cba8690a600f448_6e8ae03a40" tabindex="-1" value=""></div>
+													<div class="clear" style="padding-top:15px;"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+													</div>
+												</form>
+												</div>
+
+<!--End mc_embed_signup-->
 											</ul>
 										</footer>
 								</section>							
