--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<footer class="major">
 								<ul class="actions special">
 									<li>Become a part of the project<br /> <!-- Begin Mailchimp Signup Form -->
-										<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+										<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">  -->
 										<style type="text/css">
 											#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
 											/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
@@ -154,7 +154,7 @@
 									<footer class="major">
 											<ul class="actions special">
 												<!-- Begin Mailchimp Signup Form -->
-												<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+												<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">  -->
 												<style type="text/css">
 													#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
 													/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
