--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>OpenPPS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="https://openpps.io/images/logo.png" />
+		<link rel="icon" type="image/png" href="images/logo_green.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cfb3a177a3cba8690a600f448/b86dd02f7e82ed02040e1de1d.js");</script>
