--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>OpenPPS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="images/logo_green.png" />
+		<link rel="icon" type="image/png" href="images/logo_pins_color.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cfb3a177a3cba8690a600f448/b86dd02f7e82ed02040e1de1d.js");</script>
@@ -36,9 +36,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" style="width:128px; height:128px;" alt="" /></span>
+						<span class="logo"><img src="images/logo_pins.png" style="width:182px; height:182px;" alt="" /></span>
 						<h1>OpenPPS</h1>
-						<p>Open-source hardware project of a Programmable Power Supply.</p>
+						<p><b>Open</b>-source hardware project of a <b>P</b>rogrammable <b>P</b>ower <b>S</b>upply.</p>
 					</header>
 
 				<!-- Nav -->
@@ -57,14 +57,14 @@
 					<!-- Get Started -->
 					<section id="intro" class="main special">
 							<header class="major">
-								<h2>Open Programmable Power Supply</h2>
+								<h2>Introduction</h2>
 								<p>The point of the project is to create an open-source adjustable power supply with MCU (<b>ESP32</b>), screen, controls, <b>USB-C</b>, Wi-Fi, Bluetooth,  
-								reasonably wide input/output range, <b>portability</b>, modular structure, hackability and more.<br />
+								reasonably wide input/output range, <b>portability</b>, hackability and more.<br />
 								Everything at about the size of a 20,000 mAh power bank. </p>
 							</header>
 							<footer class="major">
 								<ul class="actions special">
-									<li>Become a part of the project<br /> <!-- Begin Mailchimp Signup Form -->
+									<li>Become a part of the project today<br /> <!-- Begin Mailchimp Signup Form -->
 										<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">  -->
 										<style type="text/css">
 											#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -74,14 +74,14 @@
 										<div id="mc_embed_signup">
 										<form action="https://OpenPPS.us20.list-manage.com/subscribe/post?u=cfb3a177a3cba8690a600f448&amp;id=6e8ae03a40" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 											<div id="mc_embed_signup_scroll">
-											<label for="mce-EMAIL">Subscribe to Updates</label>
 											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 											<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cfb3a177a3cba8690a600f448_6e8ae03a40" tabindex="-1" value=""></div>
-											<div class="clear" style="padding-top:15px;"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+											<div class="clear" style="padding-top:15px;"><input type="submit" value="Subscribe to Updates" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 											</div>
 										</form>
 										</div>
+										<p style="font-size: 0.8em;">first subscribers will count as <b>super early birds</b><br />you'll receive some bonuses or discounts later!</p>
 										
 										<!--End mc_embed_signup--></li>
 								</ul>
@@ -95,7 +95,7 @@
 										<header class="major">
 											<h2>Core Board</h2>
 										</header>
-										<ul>
+										<ul style="text-align:left;">
 												<li><b>MCU</b>: ESP32</li>
 												<li><b>DC input</b>: 4.5 - 32 V</li>
 												<li><b>DC output</b>: 1 - 25 V</li>
@@ -132,7 +132,7 @@
 							<section id="status" class="main special">
 									<header class="major">
 										<h2>Project Status</h2>
-										<p><span style="color:#AAA;">Last update 13/03/2019:</span><br /> Currently we are working on <b>Core Board</b> (PCB and firmware) to release it first on a crowdfunding platform.</p>
+										<p><span style="color:#AAA;">Last update 15/03/2019:</span><br /> Currently we are working on <b>Core Board</b> (PCB and firmware) to release it first on a crowdfunding platform.</p>
 									</header>
 									<ul class="features">
 											<li>
@@ -182,9 +182,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>OpenPPS</h2>
-							<p>If you want to support our project different way - you can tell someone about us, submit a donation, suggest a feautre or join our team. 
-								There's no such options on the website yet, so in this cases you can contact us with email. </p>
+							<h2>Another ways to participate</h2>
+							<p>If you really want to support our project - you can tell someone about us, submit a donation, leave feedback or even join our team. 
+								Please contact us with email.</p>
 						</section>
 						<section>
 							<h2>Where we are</h2>
@@ -192,7 +192,7 @@
 								<dt>Location</dt>
 								<dd>Hong Kong (Tsuen Wan) &bull; China (Shenzhen)</dd>
 								<dt>Email</dt>
-								<dd><a href="mailto:epicmap@gmail.com">epicmap@gmail.com</a></dd>
+								<dd><a href="mailto:openpps.io@gmail.com">openpps.io@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="https://github.com/openpps" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
