github widget added

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											<li>
 													<span class="icon fa-github-square" style="font-size: 152px; line-height: 0.85em;"></span>
 													<h3 style="margin-top: 8px"><b>Open-Source</b></h3>
-													<p>The project is fully open-source.<br />Anyone can fork/contribute after initial commit <a href="https://github.com/openpps" target="_blank">at GitHub</a>.</p>
+													<p>The project is complitely open-source.</p>
 											</li>
 									</ul>
 									<footer class="major">
@@ -182,9 +182,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Another ways to participate</h2>
-							<p>If you really want to support our project - you can tell someone about us, submit a donation, leave feedback or even join our team. 
-								Please contact us with email.</p>
+								<iframe allowtransparency="true" frameborder="0" scrolling="no" seamless="seamless" src="https://colmdoyle.github.io/gh-activity/gh-activity.html?user=openpps&type=user" style="max-width: 500px; min-width: 200px; width:100%;" height="300"></iframe>
 						</section>
 						<section>
 							<h2>Where we are</h2>
