--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-								<iframe allowtransparency="true" frameborder="0" scrolling="no" seamless="seamless" src="https://colmdoyle.github.io/gh-activity/gh-activity.html?user=openpps&type=user" style="max-width: 500px; min-width: 200px; width:100%;" height="300"></iframe>
+								<iframe allowtransparency="true" frameborder="0" scrolling="no" seamless="seamless" src="https://cdoyle.me/gh-activity/gh-activity.html?user=openpps&type=user" style="max-width: 500px; min-width: 200px; width:100%;" height="300"></iframe>
 						</section>
 						<section>
 							<h2>Where we are</h2>
