--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											<li>
 													<span class="icon fa-github-square" style="font-size: 152px; line-height: 0.85em;"></span>
 													<h3 style="margin-top: 8px"><b>Open-Source</b></h3>
-													<p>The project is complitely open-source.</p>
+													<p>The project is completely open-source.</p>
 											</li>
 									</ul>
 									<footer class="major">
