--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 					<section id="intro" class="main special">
 							<header class="major">
 								<h2>Introduction</h2>
-								<p>The point of the project is to create an open-source adjustable power supply with MCU (<b>ESP32</b>), screen, controls, <b>USB-C</b>, Wi-Fi, Bluetooth,  
-								reasonably wide input/output range, <b>portability</b>, hackability and more.<br />
+								<p>The project, is a portable adjustable power supply with MCU (<b>ESP32</b>), screen, controls, <b>USB-C</b>, Wi-Fi, Bluetooth,  
+								reasonably wide input/output voltage range, open-source hackability and more.<br />
 								Everything at about the size of a 20,000 mAh power bank. </p>
 							</header>
 							<footer class="major">
@@ -132,7 +132,7 @@
 							<section id="status" class="main special">
 									<header class="major">
 										<h2>Project Status</h2>
-										<p><span style="color:#AAA;">Last update 15/03/2019:</span><br /> Currently we are working on <b>Core Board</b> (PCB and firmware) to release it first on a crowdfunding platform.</p>
+										<p><span style="color:#AAA;">Last update 07/06/2019:</span><br /> Currently we are working on <b>Core Board</b> prototype.</p>
 									</header>
 									<ul class="features">
 											<li>
@@ -196,7 +196,7 @@
 								<li><a href="https://github.com/openpps" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; OpenPPS. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; OpenPPS. Template by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
